tests/baselines/reference/asyncWithVarShadowing_es6(strict=true).errors.txt
asyncWithVarShadowing_es6.ts(4,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(8,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(12,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(16,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(20,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(24,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(28,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(32,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(36,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(40,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(44,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(48,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(52,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(56,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(60,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(64,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(68,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(72,23): error TS7031: Binding element 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(76,22): error TS7031: Binding element 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(80,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(86,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(92,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(100,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(108,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(117,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(126,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(130,14): error TS2339: Property 'x' does not exist on type 'unknown'.
asyncWithVarShadowing_es6.ts(135,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(143,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(149,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(156,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(162,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(167,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(178,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(184,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(189,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(194,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(200,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(207,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
asyncWithVarShadowing_es6.ts(214,21): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== asyncWithVarShadowing_es6.ts (40 errors) ====
    // https://github.com/Microsoft/TypeScript/issues/20461
    declare const y: any;
    
    async function fn1(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var x;
    }
    
    async function fn2(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var x, z;
    }
    
    async function fn3(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var z;
    }
    
    async function fn4(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var x = y;
    }
    
    async function fn5(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { x } = y;
    }
    
    async function fn6(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { x, z } = y;
    }
    
    async function fn7(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { x = y } = y;
    }
    
    async function fn8(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { z: x } = y;
    }
    
    async function fn9(x) {
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { z: { x } } = y;
    }
    
    async function fn10(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { z: { x } = y } = y;
    }
    
    async function fn11(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var { ...x } = y;
    }
    
    async function fn12(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [x] = y;
    }
    
    async function fn13(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [x = y] = y;
    }
    
    async function fn14(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [, x] = y;
    }
    
    async function fn15(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [...x] = y;
    }
    
    async function fn16(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [[x]] = y;
    }
    
    async function fn17(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        var [[x] = y] = y;
    }
    
    async function fn18({ x }) {
                          ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
        var x;
    }
    
    async function fn19([x]) {
                         ~
!!! error TS7031: Binding element 'x' implicitly has an 'any' type.
        var x;
    }
    
    async function fn20(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        {
            var x;
        }
    }
    
    async function fn21(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        if (y) {
            var x;
        }
    }
    
    async function fn22(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        if (y) {
        }
        else {
            var x;
        }
    }
    
    async function fn23(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
            var x;
        }
        catch (e) {
        }
    }
    
    async function fn24(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
    
        }
        catch (e) {
            var x;
        }
    }
    
    async function fn25(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
    
        }
        catch (x) {
            var x;
        }
    }
    
    async function fn26(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
    
        }
        catch ({ x }) {
                 ~
!!! error TS2339: Property 'x' does not exist on type 'unknown'.
            var x;
        }
    }
    
    async function fn27(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
        }
        finally {
            var x;
        }
    }
    
    async function fn28(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        while (y) {
            var x;
        }
    }
    
    async function fn29(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        do {
            var x;
        }
        while (y);
    }
    
    async function fn30(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var x = y;;) {
    
        }
    }
    
    async function fn31(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var { x } = y;;) {
        }
    }
    
    async function fn32(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (;;) {
            var x;
        }
    }
    
    async function fn33(x: string) {
        for (var x in y) {
        }
    }
    
    async function fn34(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var z in y) {
            var x;
        }
    }
    
    async function fn35(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var x of y) {
        }
    }
    
    async function fn36(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var { x } of y) {
        }
    }
    
    async function fn37(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        for (var z of y) {
            var x;
        }
    }
    
    async function fn38(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        switch (y) {
            case y:
                var x;
        }
    }
    
    async function fn39(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        foo: {
            var x;
            break foo;
        }
    }
    
    async function fn40(x) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        try {
    
        }
        catch {
            var x;
        }
    }
    